--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,31 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>Gulp, Bower Projects</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" href="../bower_components/jquery-ui/themes/smoothness/jquery-ui.min.css">
+    <link rel="stylesheet" href="../bower_components/normalize-css/normalize.css">
+    <link rel="stylesheet" href="../dist/assets/css/styles.css">
+</head>
 <body>
 
-<h1>My First Heading</h1>
+<div id="projects">
+    <h3>jQuery Core</h3>
+    <p>jQuery is a fast, small, and feature-rich JavaScript library...</p>
+    <h3>jQuery UI</h3>
+    <p>jQuery UI is a curated set of user interface interactions...</p>
+    <h3>jQuery Mobile</h3>
+    <p>jQuery Mobile is a HTML5-based user interface system...</p>
+</div>
 
-<p>My first paragraph.</p>
+<script src="../bower_components/jquery/dist/jquery.min.js"></script>
+<script src="../bower_components/jquery-ui/jquery-ui.min.js"></script>
+<script src="../dist/assets/js/compiled.js"></script>
+<script>
+    $("#projects").accordion();
+</script>
 
+<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </body>
 </html>
-
