--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="../bower_components/jquery-ui/themes/smoothness/jquery-ui.min.css">
     <link rel="stylesheet" href="../bower_components/normalize-css/normalize.css">
-    <link rel="stylesheet" href="../dist/assets/css/styles.css">
+    <link rel="stylesheet" href="../dist/web/css/styles.css">
 </head>
 <body>
 
@@ -21,7 +21,7 @@
 
 <script src="../bower_components/jquery/dist/jquery.min.js"></script>
 <script src="../bower_components/jquery-ui/jquery-ui.min.js"></script>
-<script src="../dist/assets/js/compiled.js"></script>
+<script src="../dist/web/js/compiled.js"></script>
 <script>
     $("#projects").accordion();
 </script>
